fix layout broken

--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,9 +1,10 @@
 .container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
+
 .dashboard_body {
   width: 100%;
   height: 100%;
